--- a/public/index.html
+++ b/public/index.html
@@ -2,9 +2,13 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" />
+    <meta name="description" content="Vegan Bingo is a simple game that pokes a little fun at our friends who ask Vegans the same questions over and over again. Each question has an answer, both short and detailed which will give you some ideas for how to navigate these kind conversations. It was written to have fun and help spread compassion!">
+    <meta name="keywords" content="Vegan, Bingo, FAQ, Frequently asked questions, compassion, animals">
+    <meta name="author" content="Cameron Green http://camerongreen.org">
     <meta name="viewport" content="initial-scale=1, width=device-width" />
     <meta name="theme-color" content="#000000" />
+
+    <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
