Adding facebook metatags

--- a/public/index.html
+++ b/public/index.html
@@ -2,11 +2,16 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <meta name="description" content="Vegan Bingo is a simple game that pokes a little fun at our friends who ask Vegans the same questions over and over again. Each question has an answer, both short and detailed which will give you some ideas for how to navigate these kind conversations. It was written to have fun and help spread compassion!">
-    <meta name="keywords" content="Vegan, Bingo, FAQ, Frequently asked questions, compassion, animals">
-    <meta name="author" content="Cameron Green http://camerongreen.org">
+    <meta name="description" content="Vegan Bingo is a simple game that pokes a little fun at our friends who ask Vegans the same questions over and over again. Each question has an answer, both short and detailed which will give you some ideas for how to navigate these kind conversations. It was written to have fun and help spread compassion!" />
+    <meta name="keywords" content="Vegan, Bingo, FAQ, Frequently asked questions, compassion, animals" />
+    <meta name="author" content="Cameron Green http://camerongreen.org" />
     <meta name="viewport" content="initial-scale=1, width=device-width" />
     <meta name="theme-color" content="#000000" />
+
+
+    <meta name="og:title" content="Vegan Bingo!" />
+    <meta name="og:image" content="/images/vegan-bingo-share.png" />
+    <meta name="og:description" content="Vegan Bingo is a simple game that pokes a little fun at our friends who ask Vegans the same questions over and over again. Each question has an answer, both short and detailed which will give you some ideas for how to navigate these kind conversations. It was written to have fun and help spread compassion!" />
 
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" />
     <!--
